--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^2.2.3",
     "apisauce": "^3.0.1",
     "axios": "^1.4.0",
     "i18next": "^23.10.1",
@@ -43,7 +44,6 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-material-dropdown-v2": "^0.12.0",
     "react-native-offline": "^6.0.2",
-    "react-native-onesignal": "^5.0.0",
     "react-native-otp-entry": "^1.6.1",
     "react-native-otp-input-field": "^8.0.0",
     "react-native-pager-view": "^6.2.0",
@@ -52,8 +52,8 @@
     "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "^3.4.2",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-simple-dialogs": "^2.0.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
