--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "axios": "^1.4.0",
     "i18next": "^23.10.1",
     "lottie-react-native": "^5.1.3",
-    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-native": "0.72.3",
     "react-native-alert-notification": "^0.3.4",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-fab": "^0.2.1",
+    "react-native-banner-carousel": "^1.0.3",
     "react-native-calendars": "^1.1300.0",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdownalert": "^5.1.0",
@@ -47,15 +47,17 @@
     "react-native-otp-entry": "^1.6.1",
     "react-native-otp-input-field": "^8.0.0",
     "react-native-pager-view": "^6.2.0",
-    "react-native-paper": "^5.10.1",
+    "react-native-paper": "^5.12.3",
     "react-native-particles": "^0.0.8",
     "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "^3.4.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-simple-banner-carousel": "^1.0.0-alpha.2",
     "react-native-simple-dialogs": "^2.0.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
