--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.3",
@@ -38,6 +40,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-linear-gradient": "^2.8.2",
@@ -51,6 +54,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-particles": "^0.0.8",
     "react-native-phone-input": "^1.3.7",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.1",
