--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-animated-fab": "^0.2.1",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-calendars": "^1.1300.0",
+    "react-native-contacts": "^7.0.8",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-elements": "^3.4.3",
@@ -59,6 +60,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-simple-banner-carousel": "^1.0.0-alpha.2",
     "react-native-simple-dialogs": "^2.0.1",
     "react-native-size-matters": "^0.4.0",
