mise en place de l'architecture de payement

--- a/ios/foodtech.xcodeproj/xcshareddata/xcschemes/foodtech.xcscheme
+++ b/ios/foodtech.xcodeproj/xcshareddata/xcschemes/foodtech.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "foodtech.app"
-               BlueprintName = "foodtech"
-               ReferencedContainer = "container:foodtech.xcodeproj">
+               BuildableName = "koursier.app"
+               BlueprintName = "koursier"
+               ReferencedContainer = "container:koursier.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "foodtechTests.xctest"
-               BlueprintName = "foodtechTests"
-               ReferencedContainer = "container:foodtech.xcodeproj">
+               BuildableName = "koursierTests.xctest"
+               BlueprintName = "koursierTests"
+               ReferencedContainer = "container:koursier.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "foodtech.app"
-            BlueprintName = "foodtech"
-            ReferencedContainer = "container:foodtech.xcodeproj">
+            BuildableName = "koursier.app"
+            BlueprintName = "koursier"
+            ReferencedContainer = "container:koursier.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "foodtech.app"
-            BlueprintName = "foodtech"
-            ReferencedContainer = "container:foodtech.xcodeproj">
+            BuildableName = "koursier.app"
+            BlueprintName = "koursier"
+            ReferencedContainer = "container:koursier.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
