--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,7 +27,7 @@ android.enableJetifier=true
 android.disableAutomaticComponentCreation=true
 
 # Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.182.0
+# FLIPPER_VERSION=0.182.0
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
@@ -44,4 +44,19 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=novic11
+MYAPP_UPLOAD_KEY_PASSWORD=novic11
+
+
+
+org.gradle.jvmargs=-Xmx4608m
+# org.gradle.configureondemand=true
+# Version of flipper SDK to use with React Native
+FLIPPER_VERSION=0.93.0
+
+
+
 
