--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'foodtech'
+rootProject.name = 'koursier'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); 
 applyNativeModulesSettingsGradle(settings)
 include ':app'
