--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodtech",
+  "name": "koursier",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -70,6 +70,7 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
     "react-native-viewpager": "^0.2.13",
+    "react-native-webview": "^13.10.2",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.1.2",
     "react-redux-toastr": "^7.6.11",
